# context-collapse

./: .dockerignore  .gitignore  Dockerfile  README.md  cc.py  cold-start-report.html  fly.toml  mcp_server.py  pyproject.toml  railway.toml
api/: main.py
context_collapse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docs/: CNAME  demo-report.html  index.html
src/: ai_brain.py  card_renderer.py  ghost_detector.py  git_miner.py  report_renderer.py
tests/: test_core.py
